# projectAlpha

./: .gitignore  Tennis.ipynb  pyproject.toml  script.py
.github/workflows/: check-formatting-and-tests.yaml  ci-cd.yaml  create.yaml  get_info.yaml  local.yaml
projectalpha/: script.py
