[tool.poetry]
name = "projectAlpha"
version = "0.1.0"
description = ""
authors = ["Ranadheer, Vidhya"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.1"
requests = "^2.32.3"
datetime = "^5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
